fixed rows in skeleton grid; changed some spacing; removed drop shadow from button text; added highlights to odd numbered rows and set to 40% width.

--- a/app/sass/_grid.scss
+++ b/app/sass/_grid.scss
@@ -32,7 +32,7 @@
   position: relative;
   width: 100%;
   max-width: 960px;
-  margin: 2%;
+  margin: 0;
   padding: 0;
   box-sizing: border-box; }
 .column,
@@ -54,7 +54,7 @@
     width: 80%; }
   .column,
   .columns {
-    margin-left: 4%; }
+    margin-left: 2%; }
   .column:first-child,
   .columns:first-child {
     margin-left: 2%; }
@@ -156,24 +156,26 @@ h3 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; }
 h4 { font-size: 2.4rem; line-height: 1.35; letter-spacing: -.08rem; }
 h5 { font-size: 1.8rem; line-height: 1.5;  letter-spacing: -.05rem; }
 h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }
+ul { font-size: 3.0rem; }
 
 /* Larger than phablet */
-@media (min-width: 550px) {
-  h1 { font-size: 5.0rem; }
-  h2 { font-size: 4.2rem; }
-  h3 { font-size: 3.6rem; }
-  h4 { font-size: 3.0rem; }
-  h5 { font-size: 2.4rem; }
-  h6 { font-size: 1.5rem; }
+@media screen and (min-width: 500px) {
+  h1 { font-size: 3.5rem; }
+  h2 { font-size: 3.0rem; }
+  h3 { font-size: 2.3rem; }
+  h4 { font-size: 1.7rem; }
+  h5 { font-size: 1.4rem; }
+  h6 { font-size: 1.1rem; }
 }
 /* Larger than mobile */
-@media (min-width: 400px) {
-  h1 { font-size: 3.6rem; }
-  h2 { font-size: 3.0rem; }
-  h3 { font-size: 2.4rem; }
-  h4 { font-size: 1.8rem; }
-  h5 { font-size: 1.5rem; }
-  h6 { font-size: 1.2rem; }
+@media screen and (min-width: 350px) {
+  h1 { font-size: 2.9rem; }
+  h2 { font-size: 2.3rem; }
+  h3 { font-size: 1.7rem; }
+  h4 { font-size: 1.4rem; }
+  h5 { font-size: 1.1rem; }
+  h6 { font-size: 1.0rem; }
+  ul { font-size: 1.7rem; }
 }
 p {
   margin-top: 0; }
